# opcua-proxy

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .golangci.toml  .release-please-manifest.json  CHANGELOG.md  CHANGES.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  bors.toml  codecov.yml  config.go  config_test.go  go.mod  go.sum  main.go  mise.toml  release-please-config.json  renovate.json
.devcontainer/: .editorconfig  Dockerfile  devcontainer.json
.github/: release-please.yml
.github/workflows/: commitlint.yml  lint.yml  release.yml  snyk-container-analysis.yml  tests.yml  vulnerability-scan.yml
assets/: data_flow.excalidraw
certs/: generate.sh  openssl.conf  testing_cert.der  testing_key.pem
cmd/healthcheck/: main.go
cmd/opcua-centrifugo/: channels.go  channels_test.go  intervals.go  intervals_mocks_test.go  intervals_test.go  main.go  validation.go  validation_test.go
cmd/opcua-proxy/: channels.go  channels_mocks_test.go  channels_test.go  main.go  validation_test.go
crates/centrifugo-grpc/: Cargo.toml  build.rs
crates/centrifugo-grpc/proto/centrifugo/: README.md
crates/centrifugo-grpc/src/: lib.rs
integration/: .gitignore  docker-compose.yml  initial-data.mongodb  openssl.conf  smoke_test.sh  tags.json  tests-nodata.mongodb  tests.mongodb
integration/centrifugo/: centrifugo.toml
integration/config-api/: Dockerfile  check.ts  config.json  deno.json  main.ts  package.json  routes.json
integration/deno/: Dockerfile  centrifuge-test.ts  config-api-server.ts  deno.json  healthcheck.ts
integration_tests/: cypress.json  docker-compose.yml  index.html  read_nodes.json  run-local.sh
integration_tests/cypress/integration/: spec.js
internal/api/: centrifugo.go  centrifugo_mocks_test.go  centrifugo_test.go  doc.go  health.go  health_mocks_test.go  health_test.go  influxdb_metrics.go  influxdb_metrics_mocks_test.go  influxdb_metrics_test.go  problem_details.go
internal/centrifugo/: centrifugo.go  centrifugo_test.go  channel.go  channel_test.go  client.go  client_mocks_test.go  client_test.go  doc.go  heartbeat.go  heartbeat_mocks_test.go  heartbeat_test.go  status_string.go
internal/config/: config.go  config_mock_test.go  config_test.go
internal/lineprotocol/: builder.go  builder_mocks_test.go  builder_stubs_test.go  builder_test.go  doc.go  value.go  value_test.go  variant.go  variant_mocks_test.go
internal/opcua/: client.go  client_mocks_test.go  client_test.go  config.go  doc.go  gopcua.go  interval.go  interval_test.go  mocks_test.go  monitor.go  monitor_mocks_test.go  monitor_stubs_test.go  monitor_test.go  monitored_node.go  monitored_node_test.go  node.go  node_test.go  opcua.go  opcua_mocks_test.go  opcua_stubs_test.go  opcua_test.go  security.go  security_mocks_test.go  security_test.go  subscription.go  subscription_mocks_test.go  subscription_test.go  wrappers.go
internal/proxy/: doc.go  proxy.go  proxy_internal_test.go  proxy_mocks_test.go  proxy_test.go
internal/testutils/: testutils.go
src/: channel.rs  config.rs  db.rs  lib.rs  main.rs  model.rs  opcua.rs  variant.rs
src/centrifugo/: client.rs  config.rs  mod.rs  proxy_server.rs
src/opcua/: client.rs  config.rs  mod.rs  namespaces.rs  node_identifier.rs  session.rs  session_manager.rs  subscription.rs  tag_set.rs  utils.rs  variant.rs
