[package]
name = "opcua-proxy"
description = "OPC-UA proxy"
version = "6.0.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap-verbosity-flag = { version = "3.0", features = [ "tracing" ] }
env_logger = { version = "0.11", default-features = false }
futures-util = "0.3"
mongodb = "3.2"
serde = { version = "1.0", features = [ "derive" ] }
signal-hook = { version = "0.3", default-features = false }
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
tokio-util = "0.7"
tracing = "0.1"
url = "2.5"

[dependencies.clap]
version = "4.5"
default-features = false
features = [ "std", "help", "usage", "error-context", "derive", "env" ]

[dependencies.opcua]
version = "0.12"
default-features = false
features = [ "client", "vendored-openssl" ]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [ "json" ]

[dependencies.tokio]
version = "1.43"
features = [ "macros", "rt-multi-thread", "sync" ]

[dependencies.tracing-log]
version = "0.2"
default-features = false
features = [ "std" ]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = [ "ansi", "fmt", "parking_lot", "smallvec", "std" ]
