[package]
name = "opcua-proxy"
description = "OPC-UA proxy"
version = "6.0.12"
edition = "2024"
default-run = "opcua-proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = { version = "0.4.1", default-features = false }
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
tokio-util = "0.7.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.7"

[dependencies.mongodb]
version = "3.4.1"
default-features = false
features = ["bson-3", "compat-3-3-0", "dns-resolver", "rustls-tls"]

[dependencies.opcua]
version = "0.12.0"
default-features = false
features = ["client", "vendored-openssl"]

[dependencies.reqwest]
version = "0.13.1"
default-features = false
features = ["json"]

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt-multi-thread", "sync"]

[dev-dependencies]
trycmd = "1.0.0"
