[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[package]
name = "opcua-proxy"
description = "OPC-UA proxy"
version = "6.0.11"
edition.workspace = true
default-run = "opcua-proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
centrifugo-grpc = { path = "crates/centrifugo-grpc" }
clap = { version = "4.5.53", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
futures-util = "0.3.31"
async-opcua = { version = "0.17.1", features = ["client", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = { version = "0.4.1", default-features = false }
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tonic = "0.14.3"
tonic-health = "0.14.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.7"

[dev-dependencies]
trycmd = "1.0.0"
